新增三大法人歷史買賣超

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -142,16 +142,6 @@ th, td {
   text-align:center;
 }
 
-.column100 {
-  width: 130px;
-  padding-left: 25px;
-}
-
-.column100.column1 {
-  width: 265px;
-  padding-left: 42px;
-}
-
 .row100.head th {
   padding-top: 24px;
   padding-bottom: 20px;
@@ -162,9 +152,6 @@ th, td {
   padding-bottom: 14px;
 }
 
-
-/*==================================================================
-[ Ver1 ]*/
 .table100.ver1 td {
   font-family: Montserrat-Regular;
   font-size: 23px;
@@ -172,6 +159,15 @@ th, td {
   line-height: 1.4;
 }
 
+.table100.ver1 td.up {
+  color: red;
+}
+.table100.ver1 td.down {
+  color: green;
+}
+.table100.ver1 td.same {
+  color: gray;
+}
 .table100.ver1 th {
   font-family: Montserrat-Medium;
   font-size: 23px;
@@ -180,23 +176,12 @@ th, td {
   text-transform: uppercase;
   background-color: #36304a;
 }
-
-.table100.ver1 .row100:hover {
-  background-color: #f2f2f2;
-}
-
-.table100.ver1 .hov-column-ver1 {
-  background-color: #f2f2f2;
-}
-
-.table100.ver1 .hov-column-head-ver1 {
-  background-color: #484848 !important;
-}
-
 .table100.ver1 .row100 td:hover {
   background-color: #6c7ae0;
   color: #fff;
 }
+
+/*-----------------------------button group--------------------------------*/
   #main .btn-group button {
     background-color: #4CAF50; /* Green background */
     border: 1px solid green; /* Green border */
