--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -88,9 +88,9 @@
     color: white;
     border-radius: 15px;
   }
-/****************** 月份選單 ******************************/
-  #slcMonth {
-    margin: 10px;
+/********************* 下拉式選單 ********************/
+  #slct {
+    display: inline-block;
   }
 /****************** 新聞列表 ************************/  
   #newsList li a:hover {
